@@ -83,6 +83,10 @@ project.ext {
             "--add-opens", "java.desktop/java.awt=io.xpipe.app",
             "--add-opens", "net.synedra.validatorfx/net.synedra.validatorfx=io.xpipe.app",
             "--add-opens", "java.base/java.nio.file=io.xpipe.app",
+            "--add-exports", "javafx.graphics/com.sun.javafx.tk=io.xpipe.app",
+            "--add-opens", "javafx.graphics/com.sun.glass.ui=io.xpipe.app",
+            "--add-opens", "javafx.graphics/javafx.stage=io.xpipe.app",
+            "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=io.xpipe.app",
             "-Xmx8g",
             "-Dio.xpipe.app.arch=$rootProject.arch",
             "-Dfile.encoding=UTF-8",
